--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -7,76 +7,66 @@
     android:orientation="vertical"
     tools:context=".ui.bottom_fragments.MapsFragment">
 
+    <LinearLayout
+        android:id="@+id/ll_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:hint="Enter location name..."
+                android:lines="1"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:id="@+id/btn_locate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_search" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Location is shown here"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_address" />
+
+    </LinearLayout>
+
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.bottom_fragments.MapsFragment" />
+        android:layout_below="@id/ll_search" />
 
-    <LinearLayout
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="16dp"
-        android:background="@drawable/map_icon_background"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/iv_speedometr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="km/hr"
-            android:textColor="#FFF" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:id="@+id/iv_limit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:srcCompat="@drawable/ic_alarm" />
-
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iv_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:srcCompat="@drawable/ic_search" />
-
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -87,44 +77,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/night_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:srcCompat="@drawable/ic_sun" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/img_zoom_in"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:srcCompat="@drawable/ic_zoom_in" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/img_zoom_out"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:srcCompat="@drawable/ic_zoom_out" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map"
+            android:id="@+id/iv_map_non"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
@@ -136,12 +89,61 @@
             android:layout_height="10dp" />
 
         <ImageView
-            android:id="@+id/iv_traffic"
+            android:id="@+id/iv_map_normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
-            app:srcCompat="@drawable/ic_traffic" />
+            app:srcCompat="@drawable/ic_baseline_map_24" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_map_satellite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_satellite" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_map_terrian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_terrain" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_map_hybrid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_hybrid" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_map_mylocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_mylocation" />
+
 
 
     </LinearLayout>
