--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,158 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.bottom_fragments.MapsFragment">
-
-    <LinearLayout
-        android:id="@+id/ll_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/et_address"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:hint="Enter location name..."
-                android:lines="1"
-                android:textSize="18sp" />
-
-            <ImageButton
-                android:id="@+id/btn_locate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_search" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="Location is shown here"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_address" />
-
-    </LinearLayout>
-
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/ll_search" />
+        android:layout_height="match_parent" />
 
 
-    <LinearLayout
+    <!--bottom sheet container-->
+    <include
+        layout="@layout/sheet_map"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_directions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/iv_map_non"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_baseline_map_24" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map_normal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_baseline_map_24" />
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map_satellite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_satellite" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map_terrian"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_terrain" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map_hybrid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_hybrid" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="10dp" />
-
-        <ImageView
-            android:id="@+id/iv_map_mylocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/map_icon_background"
-            android:padding="10sp"
-            app:itemIconTint="@drawable/bottom_nav_selector"
-            app:srcCompat="@drawable/ic_mylocation" />
+        android:layout_margin="@dimen/spacing_smlarge"
+        android:clickable="true"
+        android:tint="@android:color/white"
+        app:fabSize="normal"
+        app:layout_anchor="@id/bottom_sheet"
+        app:layout_anchorGravity="top|end"
+        app:rippleColor="@android:color/white"
+        app:srcCompat="@drawable/ic_pin_drop" />
 
 
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
