--- a/app/src/main/res/layout/sheet_map.xml
+++ b/app/src/main/res/layout/sheet_map.xml
@@ -10,10 +10,10 @@
     app:behavior_peekHeight="85dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         app:cardCornerRadius="1dp"
         app:cardElevation="20dp">
 
@@ -33,128 +33,19 @@
                 android:id="@+id/tv_address_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/spacing_xxlarge"
-                android:layout_marginStart="@dimen/spacing_xxlarge"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|center_horizontal"
                 android:minHeight="50dp"
-                android:paddingEnd="@dimen/spacing_large"
-                android:paddingLeft="@dimen/spacing_large"
-                android:paddingRight="@dimen/spacing_large"
                 android:paddingStart="@dimen/spacing_large"
-                android:text="Dandelion Chocolate"
+                android:paddingLeft="@dimen/spacing_large"
+                android:paddingEnd="@dimen/spacing_large"
+                android:paddingRight="@dimen/spacing_large"
+                android:text="Store Detail"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/spacing_large">
-
-
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="@dimen/spacing_xxlarge"
-                    android:layout_marginStart="@dimen/spacing_xxlarge"
-                    android:background="@color/grey_10" />
-
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_middle"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@drawable/ic_location" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:id="@+id/tv_address_detail"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="740 Valencia St, San Francisco, CA"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@drawable/ic_phone" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:id="@+id/tv_phone"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="(415) 349-0942"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@android:color/transparent"
-                            android:tint="@color/grey_20"
-                            app:srcCompat="@drawable/ic_schedule" />
-
-                        <View
-                            android:layout_width="@dimen/spacing_mxlarge"
-                            android:layout_height="0dp" />
-
-                        <TextView
-                            android:id="@+id/tv_return_time"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="Wed, 10 AM - 9 PM"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_sheetmap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
