--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -92,4 +92,10 @@
     <item name="android:background">@color/divider_secondary_dark_color</item>
     <item name="android:layout_height">1dp</item>
     </style>
+
+    <style name="EditText.Grey" parent="@style/Theme.Cyacle">
+        <item name="colorControlActivated">@color/grey_60</item>
+        <item name="colorControlHighlight">@color/grey_60</item>
+        <item name="colorControlNormal">@color/grey_40</item>
+    </style>
 </resources>
